--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,31 @@
   justify-content: center;
   height: 70vh;
 }
+/* cart and sylheti-brand text animation */
+.cart-summary{
+  color: hsl(0, 0%, 28%);
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 5px;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.cart-summary, .sylheti-brand,.hrtag, .design{
+  /* padding: 64px; */
+  background: linear-gradient(to right, hsl(0, 0%, 50%) 0, hsl(194, 94%, 65%) 10%, hsl(0, 0%, 30%) 20%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shine 5s infinite linear;
+}
+@keyframes shine {
+  0% {
+    background-position: 0;
+  }
+  60% {
+    background-position: 600px;
+  }
+  100% {
+    background-position: 600px;
+  }
+}
