--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@
   text-transform: uppercase;
 }
 
-.cart-summary, .sylheti-brand,.hrtag, .design, .ptag{
+.cart-summary,.hrtag, .design, .ptag{
   /* padding: 64px; */
   background: linear-gradient(to right, hsl(0, 0%, 50%) 0, hsl(194, 94%, 65%) 10%, hsl(0, 0%, 30%) 20%);
   -webkit-background-clip: text;
